# light-protocol

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mise.toml  .npmrc.example  .verifiable-build.json  1  AUTO_SEED_GENERATION.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMON_ERRORS.md  Cargo.toml  DOCS.md  DOCUMENTATION.md  DOCUMENTATION_v3.md  Dockerfile  Dockerfile.relayer  INSTALL.md  INTEGRATION_TESTING.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  SECURITY_REVIEW_CPI_CONTEXT.md  SEED_INDICES_COMPLETE.md  SEED_INDICES_IMPLEMENTATION.md  SEED_INDICES_USAGE.md  TESTING.md  UNIT_TESTING.md  ZERO_COPY_COMPRESSIBLE_USAGE.md  api-docs-index.html  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  (+32 more)
Client-Js/webassembly/: Cargo.toml  compile_wasm.sh
anchor-programs/system/: Cargo.toml  README.md
circuit-lib/circuitlib-rs/: .gitignore  Cargo.toml  build_circuits.sh  package.json  parse_vk_to_rust.js
circuit-lib/light-prover-client/: Cargo.toml
circuit-lib/verifier/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  rpc_pool.rs  transaction_params.rs  utils.rs
client/tests/: indexer_test.rs  photon_client.rs  rpc_client.rs
crank/: Cargo.toml  crank.toml  database.env  docker-compose.yml  keypair.json  nullifierQueueAccount.data  package.json
crank/scripts/: generate.ts  generate_sync.ts
crank/src/: cli.rs  constants.rs  errors.rs  lib.rs  main.rs  utils.rs
crank/tests/: nullifier_test.rs
fetch-accounts/: Cargo.toml  README.md  modified_lut_9NYFyEqPkyXUhkerbGHXUXkvb4qpzeEdHuGpgbgpH1NJ.json  test_batched_cpi_context_HwtjxDvFEXiWnzeMeWkMBzpQN45A95rTJNZmz1Z3pe8R.json
fetch-accounts/src/: main.rs  main_rpc.rs
forester/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  OPTIMIZATION_PROPOSAL.md  README.md  alert_rules.yml  alertmanager.yml  build.rs  docker-compose.yml  forester.toml  justfile  metrics-contract.json  package.json  perf.data  plot_enhanced.py  prometheus.yml  test.sh
forester-utils/: CHANGELOG.md  Cargo.toml
forester-utils/src/: account_zero_copy.rs  address_merkle_tree_config.rs  address_staging_tree.rs  batch_parsing.rs  bench_circuit_inputs.rs  bundle.rs  error.rs  fast_address_staging_tree.rs  forester_epoch.rs  indexed_tree_processor.rs  instructions.rs  lib.rs  proof_client.rs  rate_limiter.rs  registry.rs  rpc_pool.rs  solana_rpc.rs  staging_tree.rs  test_data_photon.json  transaction_params.rs  utils.rs
forester-utils/tests/: compare_circuit_inputs.rs
forester/ansible/: inventory.ini  playbook.yml
forester/benches/: batch_preparation_bench.rs
forester/dashboard/: .env.local.example  .gitignore  Dockerfile  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
forester/docs/: v1_forester_flows.md
forester/proto/: photon.proto
forester/scripts/: auto_scale.py  check_forester.sh  compare_performance.py  dump.sh  generate.ts  generate_10.ts  generate_100k.ts  generate_sync.ts  get_queue.ts  manage_droplets.py  plot.py  plot_enhanced.py  plot_proof_pipeline.py  prefill_queues.ts  solana.sh  spawn.sh  v2_stats.py  wait_for_db.sh
forester/src/: alerts.rs  api_server.rs  batched_address_ops.rs  batched_ops.rs  cli.rs  config.rs  constants.rs  epoch_manager.rs  errors.rs  external_services_config.rs  forester_stats.rs  forester_status.rs  health_check.rs  helius_priority_fee_types.rs  helius_types.rs  indexer_type.rs  lib.rs  logging.rs  main.rs  matching.rs  metrics.rs  operations.rs  pagerduty.rs  photon_indexer.rs  priority_fee.rs  probe_type.rs  pubsub_client.rs  queue_helpers.rs  rpc_pool.rs  send_transaction.rs  settings.rs  slot_tracker.rs  smart_transaction.rs  telemetry.rs  transaction_timing.rs  tree_data_sync.rs  tree_finder.rs  utils.rs  work_coordinator.rs
forester/static/: dashboard.html
forester/tests/: address_v2_test.rs  batch_test.rs  batched_address_test.rs  batched_op_test.rs  batched_ops_test.rs  batched_state_async_indexer_test.rs  batched_state_indexer_test.rs  batched_state_test.rs  bench_dashmap_access.rs  bench_dashmap_memory.rs  bench_gpa.rs  e2e_photon_legacy_test.rs  e2e_test.rs  e2e_v1_test.rs  e2e_v2_test.rs  empty_address_tree_test.rs  interop_address_test.rs  interop_nullify_test.rs  interop_test.rs  metrics_contract_test.rs  nullifier_test.rs  pagerduty_test.rs  performance_test.rs  photon_interop_address_tree_test.rs  photon_interop_state_tree_test.rs  photon_interop_test.rs  photon_tests.rs  priority_fee_test.rs  rollover_test.rs  (+14 more)
kora-light-client/: CLAUDE.md  Cargo.toml
light-system-programs/: .gitignore  Anchor.toml  Cargo.toml  lookUpTable.txt  package-lock.json  package.json  runBrowserTest.sh  runRelayer.sh  runTest.sh  runTestNoAccounts.sh  rust-toolchain.toml  tsconfig.json
light-verifier-sdk/: Cargo.toml
macro-circom/: .gitignore  Cargo.toml  README.md  build.sh  buildCircuit.sh
photon-api/: Cargo.toml  README.md
program/: Anchor.toml  Cargo.toml  bn254_i_order.txt  deploy_program.sh  merkletree_bytes.txt  out.txt  out1.txt  out2.txt  outout.txt  outout1.txt  outout2.txt  test_debug_0.txt  test_debug_1.txt  test_debug_10.txt  test_debug_12.txt  test_debug_13.txt  test_debug_14.txt  test_debug_15.txt  test_debug_16.txt  test_debug_17.txt  test_debug_19.txt  test_debug_1^1.txt  test_debug_2.txt  test_debug_20.txt  test_debug_21.txt  test_debug_22.txt  test_debug_23.txt  test_debug_24.txt  test_debug_25.txt  test_debug_26.txt  test_debug_27.txt  test_debug_27_ME.txt  test_debug_28.txt  test_debug_29.txt  test_debug_3.txt  test_debug_31.txt  test_debug_33.txt  test_debug_4.txt  test_debug_5.txt  test_debug_7.txt  (+5 more)
sdk/: Cargo.toml  README.md  readme.md
sparse-merkle-tree/: Cargo.toml
state/: Cargo.toml
test-program/: Anchor.toml  Cargo.toml  README.md
test-sdk/: Cargo.toml
test-utils/: Cargo.toml
utils/: Cargo.toml
verifier-sdk/: Cargo.toml
verifier_program/: Anchor.toml  Cargo.toml  package-lock.json  package.json
xtask/: Cargo.toml
zk-rs/: Cargo.toml  index.html  index.js  package.json  tsconfig.benches.json  tsconfig.json
(+10959 files in other folders)
