[workspace]
members = [
    "program-libs/account-checks",
    "program-libs/compressed-account",
    "program-libs/aligned-sized",
    "program-libs/batched-merkle-tree",
    "program-libs/bloom-filter",
    "program-libs/hasher",
    "program-libs/verifier",
    "program-libs/merkle-tree-metadata",
    "program-libs/zero-copy",
    "program-libs/concurrent-merkle-tree",
    "program-libs/hash-set",
    "program-libs/indexed-merkle-tree",
    "program-libs/indexed-array",
    "programs/account-compression",
    "programs/system",
    "programs/compressed-token",
    "programs/registry",
    "anchor-programs/system",
    "sdk-libs/client",
    "sdk-libs/macros",
    "sdk-libs/sdk",
    "sdk-libs/sdk-pinocchio",
    "sdk-libs/sdk-types",
    "sdk-libs/photon-api",
    "sdk-libs/program-test",
    "xtask",
    "examples/anchor/token-escrow",
    # "examples/anchor/name-service-without-macros",
    "examples/anchor/counter",
    # "examples/anchor/memo",
    "program-tests/account-compression-test",
    "program-tests/compressed-token-test",
    "program-tests/e2e-test",
    "program-tests/registry-test",
    "program-tests/system-cpi-test",
    "program-tests/system-cpi-v2-test",
    "program-tests/system-test",
    # Issue is that anchor discriminator now returns a slice instead of an array
    "program-tests/sdk-anchor-test/programs/sdk-anchor-test",
    "program-tests/sdk-test",
    "program-tests/sdk-pinocchio-test",
    "program-tests/create-address-test-program",
    "program-tests/utils",
    "program-tests/merkle-tree",
    "program-tests/client-test",
    "forester-utils",
    "forester",
    "sparse-merkle-tree",
]

resolver = "2"

[profile.dev]
opt-level = 0
debug = true
strip = "none"

[profile.release]
overflow-checks = true

[workspace.dependencies]
solana-banks-client = { version = "2.2" }
solana-banks-interface = { version = "2.2" }
solana-program = "2.2"
solana-pubkey = "2.2"
solana-sdk = "2.2"
solana-cpi = "2.2"
solana-client = "2.2"
solana-cli-output = "2.2"
solana-transaction-status = "2.2"
solana-account-decoder = "2.2"
solana-account-decoder-client-types = "2.2"
solana-transaction-status-client-types = "2.2"
solana-rpc = "2.2"
solana-rpc-client-api = "2.2"
solana-transaction-context = "2.2"
solana-frozen-abi = "2.2"
solana-frozen-abi-macro = "2.2"
solana-msg = { version = "2.2" }
solana-zk-token-sdk = "2.2"
solana-logger = "2.2"
solana-bpf-loader-program = "2.2"
solana-bn254 = "2.2"
solana-sysvar = { version = "2.1.1" }
solana-program-error = { version = "2.1.1" }
solana-account-info = { version = "2.1.1" }
solana-transaction = { version = "2.2" }
solana-transaction-error = { version = "2.2" }
solana-hash = { version = "2.2" }
solana-clock = { version = "2.2" }
solana-signature = { version = "2.2" }
solana-commitment-config = { version = "2.2" }
solana-account = { version = "2.2" }
solana-epoch-info = { version = "2.2" }
solana-keypair = { version = "2.2" }
solana-compute-budget-interface = { version = "2.2" }
solana-signer = { version = "2.2" }
solana-instruction = "2.2"
solana-rpc-client = "2.2"
solana-compute-budget = { version = "2.2" }

solana-system-interface = { version = "1" }
solana-security-txt = "1.1.1"
spl-token = "7.0.0"
spl-token-2022 = { version = "7", features = ["no-entrypoint"] }
pinocchio = { version = "0.8.4" }
bs58 = "^0.5.1"
litesvm = "0.6.1"
# Anchor
anchor-lang = { version = "=0.31.1", features = ["idl-build"] }
anchor-spl = "=0.31.1"

# Anchor compatibility
borsh = "0.10.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Macro helpers
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit-mut", "full"] }

# Async ecosystem
futures = "0.3.17"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
async-trait = "0.1.82"
bb8 = "0.8.6"
lazy_static = "1.5.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

ark-ff = "=0.5.0"
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"


# Light Protocol
light-concurrent-merkle-tree = { version = "2.1.0" }
light-hash-set = { version = "2.1.0" }
light-indexed-merkle-tree = { version = "2.1.0" }
light-sparse-merkle-tree = { version = "0.1.0" }
light-client = { version = "0.13.1" }
light-hasher = { version = "3.1.0" }
light-macros = { version = "2.1.0" }
light-merkle-tree-reference = { version = "2.0.0" }
light-heap = { version = "2.0.0" }
light-prover-client = { version = "2.0.0" }
light-sdk = { version = "0.13.0" }
light-sdk-pinocchio = { version = "0.13.0" }
light-sdk-macros = { version = "0.13.0" }
light-sdk-types = { version = "0.13.0" }
light-compressed-account = { version = "0.3.0" }
light-account-checks = { version = "0.3.0" }
light-verifier = { version = "2.1.0" }
light-zero-copy = { version = "0.2.0" }
photon-api = { version = "0.51.0" }
forester-utils = { path = "forester-utils", version = "2.0.0" }
account-compression = { path = "programs/account-compression", version = "2.0.0", features = [
    "cpi",
] }
light-compressed-token = { path = "programs/compressed-token", version = "2.0.0", features = [
    "cpi",
] }
light-system-program-anchor = { path = "anchor-programs/system", version = "2.0.0", features = [
    "cpi",
] }
light-registry = { path = "programs/registry", version = "2.0.0", features = [
    "cpi",
] }
create-address-test-program = { path = "program-tests/create-address-test-program", version = "1.0.0", features = [
    "cpi",
] }
light-program-test = { path = "sdk-libs/program-test", version = "0.13.2" }
light-batched-merkle-tree = { version = "0.3.0" }
light-merkle-tree-metadata = { version = "0.3.0" }
aligned-sized = { version = "1.1.0" }
light-bloom-filter = { version = "0.3.0" }
light-bounded-vec = { version = "2.0.0" }
light-poseidon = { version = "0.3.0" }
light-test-utils = { path = "program-tests/utils", version = "1.2.1" }
light-indexed-array = { version = "0.1.0" }
create-address-program-test = { path = "program-tests/create-address-test-program", version = "1.0.0" }
groth16-solana = { version = "0.2.0" }
bytemuck = { version = "1.19.0" }
arrayvec = "0.7"

# Math and crypto
num-bigint = "0.4.6"
num-traits = "0.2.19"
zerocopy = { version = "0.8.25" }
base64 = "0.13"
zeroize = "=1.3.0"

# HTTP client
reqwest = "0.12"

# Testing
serial_test = "3.2.0"

# Rate limiter
governor = "0.8.0"

# Random
rand = "0.8.5"
