[workspace]
members = [
    "program-libs/account-checks",
    "program-libs/array-map",
    "program-libs/compressed-account",
    "program-libs/aligned-sized",
    "program-libs/batched-merkle-tree",
    "program-libs/bloom-filter",
    "program-libs/compressible",
    "program-libs/ctoken-types",
    "program-libs/hasher",
    "program-libs/verifier",
    "program-libs/merkle-tree-metadata",
    "program-libs/zero-copy",
    "program-libs/concurrent-merkle-tree",
    "program-libs/hash-set",
    "program-libs/indexed-merkle-tree",
    "program-libs/indexed-array",
    "program-libs/zero-copy-derive",
    "programs/account-compression",
    "programs/system",
    "programs/compressed-token/program",
    "programs/registry",
    "anchor-programs/system",
    "sdk-libs/client",
    "sdk-libs/compressed-token-sdk",
    "sdk-libs/event",
    "sdk-libs/token-client",
    "sdk-libs/macros",
    "sdk-libs/sdk",
    "sdk-libs/sdk-pinocchio",
    "sdk-libs/sdk-types",
    "sdk-libs/photon-api",
    "sdk-libs/program-test",
    "xtask",
    "program-tests/account-compression-test",
    "program-tests/batched-merkle-tree-test",
    "program-tests/compressed-token-test",
    "program-tests/e2e-test",
    "program-tests/registry-test",
    "program-tests/system-cpi-test",
    "program-tests/system-cpi-v2-test",
    "program-tests/system-test",
    "program-tests/create-address-test-program",
    "program-tests/utils",
    "program-tests/merkle-tree",
    "program-tests/zero-copy-derive-test",
    "program-tests/pinocchio-nostd-test",
    "sdk-tests/client-test",
    "sdk-tests/sdk-anchor-test/programs/sdk-anchor-test",
    "sdk-tests/sdk-pinocchio-v1-test",
    "sdk-tests/sdk-pinocchio-v2-test",
    "sdk-tests/sdk-native-test",
    "sdk-tests/sdk-v1-native-test",
    "sdk-tests/sdk-token-test",
    "forester-utils",
    "forester",
    "sparse-merkle-tree",
]

resolver = "2"

[profile.dev]
opt-level = 0
debug = true
strip = "none"

[profile.release]
overflow-checks = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
solana-banks-client = { version = "2.3" }
solana-banks-interface = { version = "2.3" }
solana-program = "2.3"
solana-pubkey = "2.4.0"
solana-sdk = "2.3"
solana-cpi = "2.2"
solana-client = "2.3"
solana-cli-output = "2.3"
solana-transaction-status = "2.3"
solana-account-decoder = "2.3"
solana-account-decoder-client-types = "2.3"
solana-transaction-status-client-types = "2.3"
solana-rpc = "2.3"
solana-rpc-client-api = "2.3"
solana-transaction-context = "2.3"
solana-frozen-abi = "2.3"
solana-frozen-abi-macro = "2.3"
solana-msg = { version = "2.2" }
solana-zk-token-sdk = "2.3"
solana-logger = "2.3"
solana-bn254 = "2.2"
solana-sysvar = { version = "2.2" }
solana-program-error = { version = "2.2" }
solana-account-info = { version = "2.2" }
solana-transaction = { version = "2.2" }
solana-transaction-error = { version = "2.2" }
solana-hash = { version = "2.3" }
solana-clock = { version = "2.2" }
solana-signature = { version = "2.3" }
solana-commitment-config = { version = "2.2" }
solana-account = { version = "2.2" }
solana-epoch-info = { version = "2.2" }
solana-keypair = { version = "2.2" }
solana-compute-budget-interface = { version = "2.2" }
solana-signer = { version = "2.2" }
solana-instruction = "2.3"
solana-rpc-client = "2.3"
solana-compute-budget = { version = "2.3" }

solana-system-interface = { version = "1" }
solana-security-txt = "1.1.1"
spl-token = "7.0.0"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-pod = "0.5.1"
pinocchio = { version = "0.9" }
pinocchio-pubkey = { version = "0.3.0" }
pinocchio-system = { version = "0.3.0" }
bs58 = "^0.5.1"
litesvm = "0.7"
# Anchor
anchor-lang = { version = "0.31.1" }
anchor-spl = "0.31.1"

# Anchor compatibility
borsh = { version = "0.10.4", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Macro helpers
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit-mut", "full"] }

# Async ecosystem
futures = "0.3.17"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
async-trait = "0.1.82"
bb8 = "0.8.6"
lazy_static = "1.5.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

ark-ff = "=0.5.0"
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"


# Light Protocol
light-hash-set = { version = "4.0.0", path = "program-libs/hash-set" }
light-indexed-merkle-tree = { version = "4.0.1", path = "program-libs/indexed-merkle-tree" }
light-concurrent-merkle-tree = { version = "4.0.1", path = "program-libs/concurrent-merkle-tree" }
light-sparse-merkle-tree = { version = "0.3.0", path = "sparse-merkle-tree" }
light-client = { path = "sdk-libs/client", version = "0.16.0" }
light-event = { path = "sdk-libs/event", version = "0.1.1" }
light-hasher = { path = "program-libs/hasher", version = "5.0.0", default-features = false }
light-macros = { path = "program-libs/macros", version = "2.2.0" }
light-merkle-tree-reference = { path = "program-tests/merkle-tree", version = "4.0.0" }
light-heap = { path = "program-libs/heap", version = "2.0.0" }
light-prover-client = { path = "prover/client", version = "4.0.0" }
light-sdk = { path = "sdk-libs/sdk", version = "0.16.0" }
light-sdk-pinocchio = { path = "sdk-libs/sdk-pinocchio", version = "0.16.0" }
light-sdk-macros = { path = "sdk-libs/macros", version = "0.16.0" }
light-sdk-types = { path = "sdk-libs/sdk-types", version = "0.16.0", default-features = false }
light-compressed-account = { path = "program-libs/compressed-account", version = "0.6.2", default-features = false }
light-compressible = { path = "program-libs/compressible", version = "0.1.0" }
light-ctoken-types = { path = "program-libs/ctoken-types", version = "0.1.0" }
light-account-checks = { path = "program-libs/account-checks", version = "0.5.1", default-features = false }
light-verifier = { path = "program-libs/verifier", version = "5.0.0" }
light-zero-copy = { path = "program-libs/zero-copy", version = "0.5.0", default-features = false }
light-zero-copy-derive = { path = "program-libs/zero-copy-derive", version = "0.5.0" }
photon-api = { path = "sdk-libs/photon-api", version = "0.52.0" }
forester-utils = { path = "forester-utils", version = "2.0.0" }
account-compression = { path = "programs/account-compression", version = "2.0.0", features = [
    "cpi",
] }
light-compressed-token = { path = "programs/compressed-token/program", version = "2.0.0", features = [
    "cpi",
] }
light-compressed-token-types = { path = "sdk-libs/compressed-token-types", version = "0.1.0" }
light-compressed-token-sdk = { path = "sdk-libs/compressed-token-sdk", version = "0.1.0" }
light-token-client = { path = "sdk-libs/token-client", version = "0.1.0" }
light-system-program-anchor = { path = "anchor-programs/system", version = "2.0.0", features = [
    "cpi",
] }
light-registry = { path = "programs/registry", version = "2.0.0", features = [
    "cpi",
] }
create-address-test-program = { path = "program-tests/create-address-test-program", version = "1.0.0", features = [
    "cpi",
] }
light-program-test = { path = "sdk-libs/program-test", version = "0.16.0" }
light-batched-merkle-tree = { path = "program-libs/batched-merkle-tree", version = "0.6.1" }
light-merkle-tree-metadata = { path = "program-libs/merkle-tree-metadata", version = "0.6.0" }
aligned-sized = { path = "program-libs/aligned-sized", version = "1.1.0" }
light-bloom-filter = { path = "program-libs/bloom-filter", version = "0.5.0" }
light-bounded-vec = { version = "2.0.1" }
light-poseidon = { version = "0.3.0" }
light-test-utils = { path = "program-tests/utils", version = "1.2.1" }
light-indexed-array = { path = "program-libs/indexed-array", version = "0.3.0" }
light-array-map = { path = "program-libs/array-map", version = "0.1.0" }
light-program-profiler = { version = "0.1.0" }
create-address-program-test = { path = "program-tests/create-address-test-program", version = "1.0.0" }
groth16-solana = { version = "0.2.0" }
bytemuck = { version = "1.19.0" }
arrayvec = "0.7"
tinyvec = "1.10.0"
pinocchio-token-program = { git= "https://github.com/Lightprotocol/token", rev="38d8634353e5eeb8c015d364df0eaa39f5c48b05" }
# Math and crypto
num-bigint = "0.4.6"
tabled = "0.20"
num-traits = "0.2.19"
zerocopy = { version = "0.8.25" }
base64 = "0.13"
zeroize = "=1.3.0"
bitvec = { version = "1.0.1", default-features = false }
# HTTP client
reqwest = "0.12"

# Testing
serial_test = "3.2.0"

# Rate limiter
governor = "0.8.0"

# Random
rand = "0.8.5"

[patch.crates-io]
# Profiling logs and state is handled here
solana-program-runtime = { git = "https://github.com/Lightprotocol/agave", rev = "3a9e4e0a4411df4d9961aaa7c9f190d3fa15bc21" }
# Profiling syscalls are defined here
solana-bpf-loader-program = { git = "https://github.com/Lightprotocol/agave", rev = "3a9e4e0a4411df4d9961aaa7c9f190d3fa15bc21" }
# Patch solana-program-memory to use older version where is_nonoverlapping is public
solana-program-memory = { git = "https://github.com/anza-xyz/solana-sdk", rev = "1c1d667f161666f12f5a43ebef8eda9470a8c6ee" }
