[package]
name = "light-client"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lightprotocol/light-protocol"
description = "Client library for Light Protocol"

[dependencies]
# Solana
solana-banks-client = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

# Anchor compatibility
borsh = { workspace = true }

# Light Protocol
light-sdk = { workspace = true }
photon-api = { workspace = true }

# Async ecosystem
tokio = { workspace = true }
async-trait = { workspace = true }
bb8 = { workspace = true }

# Math and crypto
bs58 = { workspace = true }

log = { workspace = true }
thiserror = { workspace = true }
