[package]
name = "light-client"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lightprotocol/light-protocol"
description = "Client library for Light Protocol"

[features]
devenv = []

[dependencies]
# Solana
solana-banks-client = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
photon-api = { workspace = true }

# Anchor compatibility
borsh = { workspace = true }

# Async ecosystem
tokio = { workspace = true }
async-trait = { workspace = true }
bb8 = { workspace = true }

# Logging
log = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Light Protocol
light-concurrent-merkle-tree = { workspace = true }
light-indexed-merkle-tree = { workspace = true }
light-merkle-tree-reference = { workspace = true }
light-prover-client = { workspace = true }
light-sdk = { workspace = true }
light-hasher = { workspace = true }

# Math and crypto
num-bigint = { workspace = true }
num-traits = { workspace = true }

# HTTP client
reqwest = { workspace = true }


[dev-dependencies]
light-test-utils = { version = "1.2.0", path = "../test-utils", features=["devenv"]}
light-system-program = { workspace = true }
light-compressed-token = { workspace = true }
spl-token = { workspace = true }
rand = "0.8.5"
light-utils = { workspace = true }

[profile.test]
overflow-checks = true
debug = true
debug-assertions = true

