[package]
name = "crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
anchor-lang = "0.29.0"
clap = {version = "4.0.26", features = ["derive"]}
solana-sdk = "1.18.11"
solana-client = "1.18.11"
tiny-bip39 = "0.8.2"
chrono = "0.4.37"
time = "0.3.34"
account-compression = { version = "0.3.1", path = "../programs/account-compression", features = ["cpi"] }
light-compressed-pda = { version = "0.3.0", path = "../programs/compressed-pda", features = ["cpi"] }
light-hash-set = { version = "0.1.0", path = "../merkle-tree/hash-set", features = ["solana"] }
light-concurrent-merkle-tree = {path = "../merkle-tree/concurrent"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11 ", features = ["json", "rustls-tls"]  }
futures = "0.3.30"
thiserror = "1"
borsh = "0.10.3"
bs58 = "0.4.0"
photon-api = { version = "0.15.0", path = "../photon-api" }
bincode = "1.3"


[dev-dependencies]
function_name = "0.3.0"
serial_test = "2.0.0"
rstest = "0.18.2"
light-circuitlib-rs = {path = "../circuit-lib/circuitlib-rs"}
light-merkle-tree-reference = {path = "../merkle-tree/reference"}
light-hasher = {path = "../merkle-tree/hasher"}
light-bounded-vec = {path = "../merkle-tree/bounded-vec"}

sysinfo = "0.30"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8.5"
