[package]
name = "forester-utils"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lightprotocol/light-protocol"
description = "Utility library for Light's Forester node implementation"

[features]
default = ["v2"]
devenv = ["v2", "light-client/devenv"]
v2 = ["light-client/v2"]

[dependencies]

# Light Protocol
account-compression = { workspace = true }
light-hash-set = { workspace = true }
light-hasher = { workspace = true }
light-concurrent-merkle-tree = { workspace = true }
light-indexed-merkle-tree = { workspace = true }
light-indexed-array = { workspace = true }
light-prover-client = { workspace = true, features = ["devenv"] }
light-registry = { workspace = true }
light-system-program-anchor = { workspace = true, features = ["cpi"] }
light-compressed-account = { workspace = true }
light-batched-merkle-tree = { workspace = true }
light-merkle-tree-metadata = { workspace = true }
light-merkle-tree-reference = { workspace = true }
light-client = { workspace = true }
light-account-checks = { workspace = true }
create-address-test-program = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

# Anchor
anchor-lang = { workspace = true }

# Solana
solana-sdk = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Big numbers
num-traits = { workspace = true }
num-bigint = { workspace = true }

rand = { workspace = true }

# HTTP client
reqwest = { workspace = true }
log = "0.4.26"
hex = "0.4.3"
bb8 = { workspace = true }
async-trait = { workspace = true }
governor = { workspace = true }
