[package]
name = "forester-utils"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lightprotocol/light-protocol"
description = "Utility library for Light's Forester node implementation"

[features]
default = ["v2"]
devenv = ["v2", "light-client/devenv", "light-prover-client/devenv"]
v2 = ["light-client/v2"]

[dependencies]

light-hash-set = { workspace = true }
light-hasher = { workspace = true }
light-concurrent-merkle-tree = { workspace = true }
light-indexed-merkle-tree = { workspace = true }
light-indexed-array = { workspace = true }
light-compressed-account = { workspace = true }
light-batched-merkle-tree = { workspace = true }
light-merkle-tree-metadata = { workspace = true }
light-merkle-tree-reference = { workspace = true }
light-account-checks = { workspace = true }

# unrelased
light-client = { workspace = true }
light-prover-client = { workspace = true }
light-registry = { workspace = true, features = ["cpi"] }
account-compression = { workspace = true, features = ["cpi"] }
create-address-test-program = { workspace = true }


tokio = { workspace = true }
futures = { workspace = true }

anchor-lang = { workspace = true }

solana-sdk = { workspace = true }

thiserror = { workspace = true }

tracing = { workspace = true }

num-traits = { workspace = true }
num-bigint = { workspace = true }

rand = { workspace = true }

reqwest = { workspace = true }
bb8 = { workspace = true }
async-trait = { workspace = true }
governor = { workspace = true }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
