[package]
name = "forester-utils"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lightprotocol/light-protocol"
description = "Utility library for Light's Forester node implementation"
publish = false

[features]
default = ["v2"]
devenv = ["v2", "light-client/devenv", "light-prover-client/devenv"]
v2 = ["light-client/v2"]

[dependencies]

light-hash-set = { workspace = true }
light-hasher = { workspace = true, features = ["poseidon"] }
light-concurrent-merkle-tree = { workspace = true }
light-indexed-merkle-tree = { workspace = true }
light-compressed-account = { workspace = true, features = ["std"] }
light-batched-merkle-tree = { workspace = true }
light-merkle-tree-metadata = { workspace = true }
light-sparse-merkle-tree = { workspace = true }
light-account-checks = { workspace = true }
light-sdk = { workspace = true }

light-client = { workspace = true }
light-prover-client = { workspace = true }
light-registry = { workspace = true, features = ["cpi"] }
account-compression = { workspace = true, features = ["cpi"] }

tokio = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"

anchor-lang = { workspace = true }

solana-sdk = { workspace = true }

thiserror = { workspace = true }

tracing = { workspace = true }

num-traits = { workspace = true }

bb8 = { workspace = true }
async-trait = { workspace = true }
governor = { workspace = true }

[dev-dependencies]
tokio-postgres = "0.7"
bs58 = { workspace = true }
