[package]
name = "forester"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
anchor-lang = { workspace = true }
clap = { version = "4.5.27", features = ["derive", "env"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
account-compression = { workspace = true }
light-account-checks = { workspace = true }
light-batched-merkle-tree = { workspace = true }
light-compressed-account = { workspace = true, features = ["std"] }
light-system-program-anchor = { workspace = true, features = ["cpi"] }
light-hash-set = { workspace = true, features = ["solana"] }
light-hasher = { workspace = true, features = ["poseidon"] }
light-merkle-tree-reference = { workspace = true }
light-prover-client = { workspace = true }
light-registry = { workspace = true }
photon-api = { workspace = true }
forester-utils = { workspace = true }
light-client = { workspace = true, features = ["v2"] }
light-merkle-tree-metadata = { workspace = true }
light-sparse-merkle-tree = { workspace = true }
light-sdk = { workspace = true, features = ["anchor"] }
light-program-test = { workspace = true }
solana-transaction-status = { workspace = true }
bb8 = { workspace = true }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true, features = ["json", "rustls-tls", "blocking"] }
futures = "0.3.31"
async-stream = "0.3"
thiserror = { workspace = true }
borsh = { workspace = true }
bs58 = "0.5.1"
env_logger = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }

prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"
dashmap = "6.1.0"
scopeguard = "1.2.0"
itertools = "0.14.0"
num-bigint = { workspace = true }

tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.2"
tokio-stream = { version = "0.1", features = ["sync"] }
once_cell = "1.21.3"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
serial_test = { workspace = true }
light-prover-client = { workspace = true, features = ["devenv"] }
light-test-utils = { workspace = true }
light-program-test = { workspace = true, features = ["devenv"] }
light-batched-merkle-tree = { workspace = true, features = ["test-only"] }
dotenvy = "0.15"
light-compressed-token = { workspace = true }
rand = { workspace = true }
create-address-test-program = { workspace = true }
